React Code Added

--- a/js/index.html
+++ b/js/index.html
@@ -20,6 +20,11 @@
             <div class="title">
                 <p>Name of the product</p>
             </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>
         </div>
         <div class="b b2">
             <div class="pic">
@@ -27,6 +32,11 @@
             </div>
             <div class="title">
                 <p>Name of the product</p>
+            </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
             </div>
         </div>
         <div class="b b3">
@@ -36,6 +46,11 @@
             <div class="title">
                 <p>Name of the product</p>
             </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>
         </div>
         <div class="b b4">
             <div class="pic">
@@ -43,6 +58,11 @@
             </div>
             <div class="title">
                 <p>Name of the product</p>
+            </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
             </div>
         </div>
         <div class="b b5">
@@ -52,6 +72,11 @@
             <div class="title">
                 <p>Name of the product</p>
             </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>
         </div>
         <div class="b b6">
             <div class="pic">
@@ -59,7 +84,12 @@
             </div>
             <div class="title">
                 <p>Name of the product</p>
-            </div>    
+            </div>  
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>  
         </div>
         <div class="b b7">
             <div class="pic">
@@ -67,6 +97,11 @@
             </div>
             <div class="title">
                 <p>Name of the product</p>
+            </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
             </div>
         </div>
         <div class="b b8">
@@ -76,13 +111,10 @@
             <div class="title">
                 <p>Name of the product</p>
             </div>
-        </div>
-        <div class="b b9">
-            <div class="pic">
-                <img src="switch.jpg" alt="" srcset="">
-            </div>
-            <div class="title">
-                <p>Name of the product</p>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
             </div>
         </div>
         <div class="b b9">
@@ -91,7 +123,28 @@
             </div>
             <div class="title">
                 <p>Name of the product</p>
+            </div>
+            <div class="buttons">
+                <input type="number" name="" id="" value="0">
+                <button><ion-icon name="cart-outline"></ion-icon></button>
+                <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>
+        </div>
+        <div class="b b9">
+            <div class="pic">
+                <img src="switch.jpg" alt="" srcset="">
+            </div>
+            <div class="title">
+                <p>Name of the product</p>
+            </div>
+            <div class="buttons">
+                    <input type="number" name="" id="" value="0">
+                    <button><ion-icon name="cart-outline"></ion-icon></button>
+                    <button><ion-icon name="trending-up-outline"></ion-icon></button>
+            </div>
         </div>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
